# PyCrop2ML

./: .classpath  .gitignore  .gitmodules  .ignore  .readthedocs.yml  AUTHORS.rst  CITATION.cff  Cyml_grammar.txt  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  afgen.mod  appveyor.yml  dvlpt_requirements.txt  export.html  grammar.tx  pyproject.toml  requirements.txt  requirements_minimal.txt  setup.cfg  setup.py  test.xsd  test_xml2wf.py  travis.yml
.github/workflows/: codeql-analysis.yml  conda-package-build.yml  python-package.yml  tests.yml
.pkglts/: pkg_cfg.json  pkg_hash.json  pkg_version.json
backup_example/: test1.py  test1bis.py  test1bis2.py  test2_generate.py  test2_generate_csharp.py  test_nb.py  test_nb_csharp.py  test_parserComposition.py  xml_json.py
backup_example/transpiler/: test.py  test_declaration_from_string.py  test_for_statement.py  test_if_elif_else_from_string.py
backup_test/: __init__.py
conda/: conda_build_config.yaml  meta.yaml
cookiecutter-crop2ml/: README.md  cookiecutter.json
cookiecutter-crop2ml/tests/: test_creation.py
cookiecutter-crop2ml/{{ cookiecutter.repo_name }}/: README.md
doc/: Makefile  conf.py  contributing.rst  environment.yml  index.rst  make.bat  pl2crop2ml.md  requirements-rtd.txt
doc/_dvlpt/: modules.rst  pycropml.rst  (+114 more)
src/: example.py
test/: TEST_README.md  Tutorial - Raccourci.lnk  Widgets-Overview.ipynb  __init__.py.bak  apsim_conf.py  composition.py  description.py  essai.py  input.py  inputoutput.py  modelunit.py  myprog.py  output.py  parameterset.py  pparse.py  test.ipynb  test.py  test1.py  test1bis.py  test1bis2.py  test2_generate.py  test2_generate_java.py  test3_java.py  test_auto_meta.py  test_cyml__generate.py  test_cyml_operations.py  test_logger.py  test_nb.py  test_nb_csharp.py  test_nb_java.py  test_parserComposition.py  test_py2crop2ml.py  test_r_generate.py  test_to_specification.py  test_unitmodels.py  test_xml2wf.py  totalparse.py  tryparse.py
(+2518 files in other folders)
